# wegapi

./: .gitignore  README.md  architecture-details.md  pom.xml
src/main/c++/: CMakeLists.txt  constants.h  create_tiles.cpp  delete_tiles.cpp  helpers.cpp  helpers.h  ico_parser.cpp  ico_parser.h  start_client.cpp  tile.cpp  util.cpp  util.h
src/main/java/com/github/alexandergillon/wegapi/client/: Client.java  ClientDaemon.java  Util.java
src/main/java/com/github/alexandergillon/wegapi/game/: DaemonInterface.java  GameInterface.java  GameInterface2D.java  GameServerInterface.java  GameServerInterface2D.java  PlayerData.java  PlayerData2D.java  PlayerInterface.java  PlayerInterface2D.java  Tile.java  Tile2D.java  TileCoordinate.java
src/main/java/com/github/alexandergillon/wegapi/game/game_action/: CreateTiles.java  DisplayMessage.java  GameAction.java  GameOver.java  SetPlayerNumber.java
src/main/java/com/github/alexandergillon/wegapi/game_action/: ChangeImage.java  ChangeImages.java  CreateTile.java  CreateTiles.java  DisplayMessage.java  GameAction.java  GameOver.java  Message.java  SetPlayerNumber.java
src/main/java/com/github/alexandergillon/wegapi/server/: BaseServer.java  BaseServer2D.java  Server.java  ServerInterface.java
src/main/java/com/github/alexandergillon/wegapi/server/chess/: ChessBoard.java  ChessPiece.java  ChessServer.java
